--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,26 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         DBD-Pg
-version:      1.48
-version_from: Pg.pm
-installdirs:  site
-requires:
-    Test::Harness:                 2.03
-    Test::Simple:                  0.17
-
+--- #YAML:1.2
+name:              DBD-Pg
+abstract:          DBI PostgreSQL interface
+version:           1.48
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+license:           perl
+dynamic_config:    1
+requires:
+    DBI:           1.45
+build_requires:
+    Test::Harness: 2.03
+    Test::Simple:  0.30
+provides:
+    DBD::Pg:
+        file:      Pg.pm
+        version:   1.48
+resources:
+    license:       http://dev.perl.org/licenses/
+    bugtracker:    http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
+meta-spec:
+    version:       1.2
+    url:           http://module-build.sourceforge.net/META-spec-v1.2.html
+author:            Greg Sabino Mullane <greg@turnstep.com>
+generated_by:      emacs :)
+
+
