--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,35 @@
---- #YAML:1.2
-name:              DBD-Pg
-abstract:          DBI PostgreSQL interface
-version:           1.50
-distribution_type: module
-license:           perl
-dynamic_config:    1
+--- #YAML:1.3
+name                : DBD-Pg
+version             : 1.50
+abstract            : DBI PostgreSQL interface
+author:              
+  - Greg Sabino Mullane <greg@turnstep.com>
+
+license             : perl
+distribution_type   : module
+dynamic_config      : 1
+
 requires:
-    DBI:           1.45
+  DBI               : 1.45
+recommends:
+  Test::YAML::Meta  : 0.03
+  Test::Pod         : 0.95
 build_requires:
-    Test::Harness: 2.03
-    Test::Simple:  0.30
+  Test::Harness     : 2.03
+  Test::Simple      : 0.47
+  Module::Signature : 0.50
+
 provides:
-    DBD::Pg:
-        file:      Pg.pm
-        version:   1.50
+  DBD::Pg:
+    file:            Pg.pm
+    version:         1.50
+
 resources:
-    license:       http://dev.perl.org/licenses/
-    bugtracker:    http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
+  homepage:          http://search.cpan.org/dist/DBD-Pg/
+  license:           http://dev.perl.org/licenses/
+  bugtracker:        http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
+  MailingList:       http://www.nntp.perl.org/group/perl.dbd.pg/
 meta-spec:
-    version:       1.2
-    url:           http://module-build.sourceforge.net/META-spec-v1.2.html
-author:            Greg Sabino Mullane <greg@turnstep.com>
-generated_by:      emacs :)
-
-
+  version:           1.3
+  url:               http://module-build.sourceforge.net/META-spec-v1.3.html
+generated_by:        emacs
