--- a/META.yml
+++ b/META.yml
@@ -15,9 +15,12 @@ recommends:
   Test::YAML::Meta  : 0.03
   Test::Pod         : 0.95
 build_requires:
+  DBI               : 1.45
   Test::Harness     : 2.03
   Test::Simple      : 0.47
   Module::Signature : 0.50
+configure_requires:
+  DBI               : 1.45
 
 provides:
   DBD::Pg:
