Add spellings for our main pod, alphabetisize, organize, update.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -1,62 +1,69 @@
 verbose = 9
+profile-strictness = quiet
 
-[-Tics::ProhibitLongLines]
-[-ValuesAndExpressions::ProhibitMagicNumbers]
-[-Variables::RequireLocalizedPunctuationVars]
-[-InputOutput::ProhibitOneArgSelect]
-[-Variables::ProhibitPunctuationVars]
-[-Editor::RequireEmacsFileVariables]
-[-Miscellanea::RequireRcsKeywords]
+[Documentation::PodSpelling]
+stop_words = ActiveKids AutoCommit CachedKids ChildHandles ChopBlanks CompatMode CursorName DBD DBI Datatype ErrCount FetchHashKeyName HandleError HandleSetErr InactiveDestroy LongReadLen LongTruncOk Mergl Momjian Mullane NULLABLE OID PgBouncer PostgreSQL PrintError PrintWarn README RaiseError RowCache RowCacheSize SQL SQLSTATE SSL STDIN STDOUT Sabino Savepoints ShowErrorStatement TaintIn TaintOut TraceLevel UTF Username afterwards arrayrefs attr autocommit backend bitmask cancelled datatype dbd dbh errstr fd filename getfd getline largeobject len libpq pgbuiltin pgsql runtime savepoint savepoints schemas sslmode tablename tablespace tablespaces typename username varchar
+
+[-Bangs::ProhibitCommentedOutCode]
+[-Bangs::ProhibitFlagComments]
+[-Bangs::ProhibitNumberedNames]
+[-Bangs::ProhibitVagueNames]
+[-BuiltinFunctions::ProhibitBooleanGrep]
+[-BuiltinFunctions::ProhibitComplexMappings]
+[-BuiltinFunctions::ProhibitStringyEval]
+[-BuiltinFunctions::RequireBlockGrep]
+[-ClassHierarchies::ProhibitExplicitISA]
+[-CodeLayout::ProhibitParensWithBuiltins]
 [-CodeLayout::RequireTidyCode]
 [-CodeLayout::RequireUseUTF8]
-[-ValuesAndExpressions::RestrictLongStrings]
-[-RegularExpressions::RequireLineBoundaryMatching]
-[-RegularExpressions::RequireExtendedFormatting]
-[-RegularExpressions::ProhibitFixedStringMatches]
 [-ControlStructures::ProhibitCascadingIfElse]
-
-
-[-CodeLayout::ProhibitParensWithBuiltins]
-[-ValuesAndExpressions::ProhibitNoisyQuotes]
-[-ValuesAndExpressions::ProhibitNoisyQuotes]
-[-Lax::ProhibitEmptyQuotes::ExceptAsFallback]
-[-ValuesAndExpressions::ProhibitEmptyQuotes]
-[-ValuesAndExpressions::RequireInterpolationOfMetachars]
-[-Bangs::ProhibitNumberedNames]
-[-Variables::ProhibitPackageVars]
-[-ValuesAndExpressions::ProhibitAccessOfPrivateData]
-[-RegularExpressions::ProhibitCaptureWithoutTest]
-[-Bangs::ProhibitVagueNames]
+[-ControlStructures::ProhibitCStyleForLoops]
 [-ControlStructures::ProhibitPostfixControls]
-[-Modules::RequireBarewordIncludes]
-[-ValuesAndExpressions::RequireNumberSeparators]
-[-Bangs::ProhibitFlagComments]
-[-References::ProhibitDoubleSigils]
-[-Bangs::ProhibitCommentedOutCode]
-[-Modules::ProhibitExcessMainComplexity]
-[-BuiltinFunctions::RequireBlockGrep]
-[-Variables::ProhibitLocalVars]
-[-ValuesAndExpressions::ProhibitImplicitNewlines]
-[-BuiltinFunctions::ProhibitStringyEval]
-[-Lax::ProhibitStringyEval::ExceptForRequire]
-[-Modules::ProhibitMultiplePackages]
-[-Subroutines::ProhibitExplicitReturnUndef]
-[-ValuesAndExpressions::ProhibitMixedBooleanOperators]
-[-Subroutines::RequireArgUnpacking]
-[-Subroutines::ProhibitExportingUndeclaredSubs]
-[-Modules::ProhibitAutomaticExportation] 
-[-Subroutines::ProtectPrivateSubs]
+[-Documentation::RequirePodSections]
 [-Documentation::RequirePODUseEncodingUTF8]
+[-Editor::RequireEmacsFileVariables]
+[-ErrorHandling::RequireCarping]
+[-InputOutput::ProhibitOneArgSelect]
+[-Lax::ProhibitComplexMappings::LinesNotStatements]
+[-Lax::ProhibitEmptyQuotes::ExceptAsFallback]
+[-Lax::ProhibitStringyEval::ExceptForRequire]
+[-Miscellanea::RequireRcsKeywords]
+[-Modules::ProhibitAutomaticExportation] 
+[-Modules::ProhibitExcessMainComplexity]
+[-Modules::ProhibitMultiplePackages]
+[-Modules::RequireBarewordIncludes]
+[-References::ProhibitDoubleSigils]
+[-RegularExpressions::ProhibitCaptureWithoutTest]
+[-RegularExpressions::ProhibitFixedStringMatches]
+[-RegularExpressions::RequireExtendedFormatting]
+[-RegularExpressions::RequireLineBoundaryMatching]
 [-Subroutines::ProhibitExcessComplexity]
-
-## Fails to be excluded for Pg.pm:
-[-Subroutines::ProhibitCallsToUndeclaredSubs]
+[-Subroutines::ProhibitExplicitReturnUndef]
+[-Subroutines::ProhibitExportingUndeclaredSubs]
+[-Subroutines::ProhibitManyArgs]
+[-Subroutines::ProtectPrivateSubs]
+[-Subroutines::RequireArgUnpacking]
+[-Tics::ProhibitLongLines]
+[-ValuesAndExpressions::ProhibitAccessOfPrivateData]
+[-ValuesAndExpressions::ProhibitEmptyQuotes]
+[-ValuesAndExpressions::ProhibitImplicitNewlines]
+[-ValuesAndExpressions::ProhibitMagicNumbers]
+[-ValuesAndExpressions::ProhibitMixedBooleanOperators]
+[-ValuesAndExpressions::ProhibitNoisyQuotes]
+[-ValuesAndExpressions::ProhibitNoisyQuotes]
+[-ValuesAndExpressions::RequireInterpolationOfMetachars]
+[-ValuesAndExpressions::RequireNumberSeparators]
+[-ValuesAndExpressions::RestrictLongStrings]
+[-Variables::ProhibitLocalVars]
+[-Variables::ProhibitPackageVars]
+[-Variables::ProhibitPunctuationVars]
+[-Variables::RequireLocalizedPunctuationVars]
 
 ## Mostly needed for the test files
-[-Modules::RequireVersionVar]
-[-Modules::RequirePerlVersion]
-[-Modules::PerlMinimumVersion]
-[-ErrorHandling::RequireUseOfExceptions]
-[-ValuesAndExpressions::ProhibitEscapedCharacters]
 [-BuiltinFunctions::ProhibitSleepViaSelect]
+[-ErrorHandling::RequireUseOfExceptions]
+[-Modules::PerlMinimumVersion]
+[-Modules::RequirePerlVersion]
+[-Modules::RequireVersionVar]
+[-ValuesAndExpressions::ProhibitEscapedCharacters]
 
