--- a/META.yml
+++ b/META.yml
@@ -1,41 +1,55 @@
 --- #YAML:1.0
-name                : DBD-Pg
-version             : 2.1.0_1
-abstract            : DBI PostgreSQL interface
+name                  : DBD-Pg
+version               : 2.1.0_1
+abstract              : DBI PostgreSQL interface
 author:              
   - Greg Sabino Mullane <greg@turnstep.com>
 
-license             : perl
-distribution_type   : module
-dynamic_config      : 1
+license               : perl
+distribution_type     : module
+dynamic_config        : 1
 
 requires:
-  DBI               : 1.52
-  version           : 0
+  DBI                 : 1.52
+  perl                : 5.006001
+  version             : 0
 recommends:
-  Test::YAML::Meta  : 0.03
-  Test::Pod         : 0.95
-  Test::Warn        : 0.08
-  Module::Signature : 0.50
+  Encode              : 0
+  Module::Signature   : 0.50
+  Perl::Critic        : 0
+  Time::HiRes         : 0
+  Test::Pod           : 0.95
+  Test::Pod::Coverage : 0
+  Test::Warn          : 0.08
+  Test::YAML::Meta    : 0.03
 build_requires:
-  DBI               : 1.52
-  version           : 0
-  Test::More        : 0.61
+  DBI                 : 1.52
+  Test::More          : 0.61
+  version             : 0
 configure_requires:
-  version           : 0
-  DBI               : 1.52
+  DBI                 : 1.52
+  version             : 0
 
 provides:
   DBD::Pg:
-    file            : Pg.pm
-    version         : 2.1.0_1
+    file              : Pg.pm
+    version           : 2.1.0_1
+
+keywords:
+  - Postgres
+  - PostgreSQL
+  - DBI
+  - libpq
 
 resources:
-  homepage          : http://search.cpan.org/dist/DBD-Pg/
-  license           : http://dev.perl.org/licenses/
-  bugtracker        : http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
-  MailingList       : http://www.nntp.perl.org/group/perl.dbd.pg/
+  homepage            : http://search.cpan.org/dist/DBD-Pg/
+  license             : http://dev.perl.org/licenses/
+  bugtracker          : http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
+  MailingList         : http://www.nntp.perl.org/group/perl.dbd.pg/
+  Repository          : http://svn.perl.org/modules/DBD-Pg/trunk/
+
 meta-spec:
-  version           : 1.3
-  url               : http://module-build.sourceforge.net/META-spec-v1.3.html
-generated_by        : emacs
+  version             : 1.3
+  url                 : http://module-build.sourceforge.net/META-spec-v1.3.html
+
+generated_by          : emacs
