--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name                  : DBD-Pg
-version               : 2.1.3_2
+version               : 2.2.0
 abstract              : DBI PostgreSQL interface
 author:              
   - Greg Sabino Mullane <greg@turnstep.com>
@@ -34,7 +34,7 @@ configure_requires:
 provides:
   DBD::Pg:
     file              : Pg.pm
-    version           : 2.1.3_2
+    version           : 2.2.0
 
 keywords:
   - Postgres
