Check on Makefile.PL as well.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -24,14 +24,17 @@ stop_words = ActiveKids AutoCommit CachedKids ChildHandles ChopBlanks CompatMode
 [-Editor::RequireEmacsFileVariables]
 [-ErrorHandling::RequireCarping]
 [-InputOutput::ProhibitOneArgSelect]
+[-InputOutput::RequireCheckedSyscalls]
 [-Lax::ProhibitComplexMappings::LinesNotStatements]
 [-Lax::ProhibitEmptyQuotes::ExceptAsFallback]
 [-Lax::ProhibitStringyEval::ExceptForRequire]
+[-Lax::RequireEndWithTrueConst]
 [-Miscellanea::RequireRcsKeywords]
 [-Modules::ProhibitAutomaticExportation] 
 [-Modules::ProhibitExcessMainComplexity]
 [-Modules::ProhibitMultiplePackages]
 [-Modules::RequireBarewordIncludes]
+[-Modules::RequireEndWithOne]
 [-References::ProhibitDoubleSigils]
 [-RegularExpressions::ProhibitCaptureWithoutTest]
 [-RegularExpressions::ProhibitFixedStringMatches]
