--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name                  : DBD-Pg
-version               : 2.6.1_1
+version               : 2.6.2
 abstract              : DBI PostgreSQL interface
 author:              
   - Greg Sabino Mullane <greg@turnstep.com>
@@ -34,10 +34,10 @@ configure_requires:
 provides:
   DBD::Pg:
     file              : Pg.pm
-    version           : 2.6.1_1
+    version           : 2.6.2
   Bundle::DBD::Pg:
     file              : lib/Bundle/DBD/Pg.pm
-    version           : 2.6.1_1
+    version           : 2.6.2
 
 keywords:
   - Postgres
