Fix up annoying Perl::Critic things, per bug 44704 and Debian bug 521969. Also bump version.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -34,11 +34,13 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Lax::ProhibitStringyEval::ExceptForRequire]
 [-Lax::RequireEndWithTrueConst]
 [-Miscellanea::RequireRcsKeywords]
+[-Miscellanea::ProhibitUnrestrictedNoCritic]
 [-Modules::ProhibitAutomaticExportation] 
 [-Modules::ProhibitExcessMainComplexity]
 [-Modules::ProhibitMultiplePackages]
 [-Modules::RequireBarewordIncludes]
 [-Modules::RequireEndWithOne]
+[-NamingConventions::Capitalization]
 [-References::ProhibitDoubleSigils]
 [-RegularExpressions::ProhibitCaptureWithoutTest]
 [-RegularExpressions::RequireDotMatchAnything]
