--- a/META.yml
+++ b/META.yml
@@ -55,8 +55,8 @@ resources:
   homepage                  : http://search.cpan.org/dist/DBD-Pg/
   license                   : http://dev.perl.org/licenses/
   bugtracker                : http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
+  repository                : http://svn.perl.org/modules/DBD-Pg/trunk/
   MailingList               : http://www.nntp.perl.org/group/perl.dbd.pg/
-  Repository                : http://svn.perl.org/modules/DBD-Pg/trunk/
 
 meta-spec:
   version                   : 1.4
