Perl::Critic tweaks: all cosmetic

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -14,6 +14,7 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-BuiltinFunctions::RequireBlockGrep]
 [-ClassHierarchies::ProhibitExplicitISA]
 [-CodeLayout::ProhibitParensWithBuiltins]
+[-CodeLayout::ProhibitQuotedWordLists]
 [-CodeLayout::RequireTidyCode]
 [-CodeLayout::RequireASCII]
 [-CodeLayout::RequireUseUTF8]
@@ -33,6 +34,7 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Lax::ProhibitEmptyQuotes::ExceptAsFallback]
 [-Lax::ProhibitStringyEval::ExceptForRequire]
 [-Lax::RequireEndWithTrueConst]
+[-Lax::RequireExplicitPackage::ExceptForPragmata]
 [-Miscellanea::RequireRcsKeywords]
 [-Miscellanea::ProhibitUnrestrictedNoCritic]
 [-Modules::ProhibitAutomaticExportation] 
@@ -41,6 +43,7 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Modules::RequireBarewordIncludes]
 [-Modules::RequireEndWithOne]
 [-Modules::RequireExplicitInclusion]
+[-Modules::RequireExplicitPackage]
 [-NamingConventions::Capitalization]
 [-References::ProhibitDoubleSigils]
 [-RegularExpressions::ProhibitCaptureWithoutTest]
@@ -50,12 +53,15 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-RegularExpressions::ProhibitFixedStringMatches]
 [-RegularExpressions::RequireExtendedFormatting]
 [-RegularExpressions::RequireLineBoundaryMatching]
+[-Subroutines::ProhibitCallsToUnexportedSubs]
+[-Subroutines::ProhibitCallsToUndeclaredSubs]
 [-Subroutines::ProhibitExcessComplexity]
 [-Subroutines::ProhibitExplicitReturnUndef]
 [-Subroutines::ProhibitExportingUndeclaredSubs]
 [-Subroutines::ProhibitManyArgs]
 [-Subroutines::ProtectPrivateSubs]
 [-Subroutines::RequireArgUnpacking]
+[-TestingAndDebugging::ProhibitNoWarnings]
 [-Tics::ProhibitLongLines]
 [-ValuesAndExpressions::ProhibitAccessOfPrivateData]
 [-ValuesAndExpressions::ProhibitCommaSeparatedStatements]
