--- a/META.yml
+++ b/META.yml
@@ -55,7 +55,7 @@ resources:
   homepage                  : http://search.cpan.org/dist/DBD-Pg/
   license                   : http://dev.perl.org/licenses/
   bugtracker                : http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
-  repository                : http://svn.perl.org/modules/DBD-Pg/trunk/
+  repository                : git://bucardo.org/dbdpg.git
   MailingList               : http://www.nntp.perl.org/group/perl.dbd.pg/
 
 meta-spec:
