Revert the UTF-8 work in progress, so we can focus on releasing a new version first.
Reverts:
f3b14cf7b60846bf9e2749504ec3c6438ceaa274
b98eb6dcc8ecacf8500eab537f5e3c3611d5baa9
95110c88fb5186a2e38052311b69ca234cb70d17
7396d31955243ea52d8b42f7e69bb7dc080c4618
79771d43f4e5dbaed9a48ba2a9d54cc926f33c28
75455ed9e80efa3a3b3a4a6362bcc8ba75280ab3
6b8c63d17f67f8f52b0665a7f78b956a4f9d7fcb
2fd6019af9053baa637688cc35dd9198ea6929d5
11092ce16cc51cb4f7c6cc371603204b4cd20ea6
89bacc9ecee231ae497c420deaf644721f4d76ec
faeba09d557f53e76d02115139f03591955f1d84
721d3b34d5dd45ccbd9c3346007fe1fe6346b01e
fa989d0e27ef23620cd1b7570d7917caa5036eaa
72737e20d133654a5b311b62620f5234e1b959c5
0efa859fda4705ccc2206dded2e011936e3ca78d
9638272e808fa9a99cd5eee17b13d5901dd347d7
a034f656c7b2502dc9b070452c11961218c67565
788c799475d9e2b5ada6e04d4c83f6d46c8564f8
7ac56ab1a6121be257af8eed0cdffb2f17166fee

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name                        : DBD-Pg
-version                     : 2.99.9_2
+version                     : 2.18.1
 abstract                    : DBI PostgreSQL interface
 author:              
   - Greg Sabino Mullane <greg@turnstep.com>
@@ -30,10 +30,10 @@ recommends:
 provides:
   DBD::Pg:
     file                    : Pg.pm
-    version                 : 2.99.9_2
+    version                 : 2.18.1
   Bundle::DBD::Pg:
     file                    : lib/Bundle/DBD/Pg.pm
-    version                 : 2.99.9_2
+    version                 : 2.18.1
 
 keywords:
   - Postgres
