--- a/META.yml
+++ b/META.yml
@@ -46,7 +46,7 @@ resources:
   homepage                  : http://search.cpan.org/dist/DBD-Pg/
   license                   : http://dev.perl.org/licenses/
   bugtracker                : http://rt.cpan.org/Public/Dist/Display.html?Name=DBD-Pg
-  repository                : git://bucardo.org/dbdpg.git
+  repository                : https://github.com/bucardo/dbdpg
   MailingList               : http://www.nntp.perl.org/group/perl.dbd.pg/
   IRC                       : irc://irc.freenode.net/#postgresql
 
