Fix errant character in META.yml
Per RT ticket #124405

--- a/META.yml
+++ b/META.yml
@@ -1,4 +1,4 @@
-%--- #YAML:1.0
+--- #YAML:1.0
 name                        : DBD-Pg
 version                     : 3.7.3
 abstract                    : DBI PostgreSQL interface
