Perl::Critic tweaks

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -35,8 +35,9 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-ErrorHandling::RequireCheckingReturnValueOfEval]
 [-InputOutput::ProhibitBacktickOperators]
 [-InputOutput::ProhibitOneArgSelect]
-[-InputOutput::RequireCheckedSyscalls]
 [-InputOutput::RequireBriefOpen]
+[-InputOutput::RequireCheckedClose]
+[-InputOutput::RequireCheckedSyscalls]
 [-Lax::ProhibitComplexMappings::LinesNotStatements]
 [-Lax::ProhibitEmptyQuotes::ExceptAsFallback]
 [-Lax::ProhibitStringyEval::ExceptForRequire]
