Exclude soeme Perlcritic Frrenode policies

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -33,6 +33,10 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Editor::RequireEmacsFileVariables]
 [-ErrorHandling::RequireCarping]
 [-ErrorHandling::RequireCheckingReturnValueOfEval]
+[-Freenode::PackageMatchesFilename]
+[-Freenode::WhileDiamondDefaultAssignment]
+[-Freenode::EmptyReturn]
+[-Freenode::Each]
 [-InputOutput::ProhibitBacktickOperators]
 [-InputOutput::ProhibitOneArgSelect]
 [-InputOutput::RequireBriefOpen]
