First round of perlcriticrc adjustments

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -1,8 +1,8 @@
-verbose = 9
+verbose = %F [%p] %m at line %l, column %c.  (Severity: %s)\n
 profile-strictness = quiet
 
 [Documentation::PodSpelling]
-stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBlanks CompatMode CursorName DBD DBI Datatype dbdpg dev enum ErrCount FetchHashKeyName HandleError HandleSetErr InactiveDestroy LongReadLen LongTruncOk Mergl Momjian Mullane NULLABLE Oid OID ParamValues ParamTypes PgBouncer pgend pglibpq pglogin pgprefix pgquote pgstart PGSERVICE PGSYSCONFDIR perl Postgres PostgreSQL PrintError PrintWarn README RaiseError RowCache RowCacheSize RowsInCache SQL SQLSTATE SSL STDIN STDERR STDOUT Sabino Savepoints ShowErrorStatement TaintIn TaintOut TraceLevel UTF Username afterwards arrayrefs attr autocommit backend bitmask bytea cancelled datatype dbd dbh errstr fd filename getfd getline hashref largeobject len libpq lseg pgbuiltin pgsql runtime savepoint savepoints schemas sslmode tablename tablespace tablespaces tuple typename username varchar undef Perlish arrayref datatypes bool func PID dr ReadOnly nullable hashrefs DSN onwards AutoInactiveDestroy PQexecParams PQexecPrepared JSON param pseudotype
+stop_words = ActiveKids afterwards arrayref arrayrefs attr autocommit AutoCommit AutoInactiveDestroy backend bitmask bool boolean Bunce bytea CachedKids cancelled ChildHandles ChopBlanks CompatMode CursorName datatype Datatype datatypes dbd DBD dbdpg dbh DBI dev dr DSN enum ErrCount errstr fd FetchHashKeyName filename func getfd getline HandleError HandleSetErr hashref hashrefs InactiveDestroy JSON largeobject len libpq LongReadLen LongTruncOk lseg Mergl Momjian Mullane nullable NULLABLE Oid OID onwards param ParamTypes ParamValues perl Perlish PgBouncer pgbuiltin pgend pglibpq pglogin pgprefix pgquote PGSERVICE pgsql pgstart PGSYSCONFDIR PID Postgres PostgreSQL PQexecParams PQexecPrepared PrintError PrintWarn pseudotype RaiseError README ReadOnly RowCache RowCacheSize RowsInCache runtime Sabino savepoint savepoints Savepoints schemas ShowErrorStatement SQL SQLSTATE SSL sslmode STDERR STDIN STDOUT tablename tablespace tablespaces TaintIn TaintOut TraceLevel tuple typename undef username Username UTF varchar
 
 [-Bangs::ProhibitBitwiseOperators]
 [-Bangs::ProhibitCommentedOutCode]
@@ -18,25 +18,33 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-CodeLayout::ProhibitHashBarewords]
 [-CodeLayout::ProhibitParensWithBuiltins]
 [-CodeLayout::ProhibitQuotedWordLists]
+[-CodeLayout::ProhibitSpaceIndentation]
 [-CodeLayout::RequireASCII]
+[-CodeLayout::RequireBreakBeforeOperator]
+[-CodeLayout::RequireKRBracing]
+[-CodeLayout::RequireSpaceAroundBinaryOperators]
 [-CodeLayout::RequireTidyCode]
 [-CodeLayout::RequireTrailingCommaAtNewline]
 [-CodeLayout::RequireUseUTF8]
+[-CodeLayout::TabIndentSpaceAlign]
+[-CognitiveComplexity::ProhibitExcessCognitiveComplexity]
 [-Compatibility::PodMinimumVersion]
 [-ControlStructures::ProhibitCascadingIfElse]
 [-ControlStructures::ProhibitCStyleForLoops]
 [-ControlStructures::ProhibitDeepNests]
 [-ControlStructures::ProhibitPostfixControls]
 [-Documentation::RequireLinkedURLs]
+[-Documentation::RequirePod]
 [-Documentation::RequirePodSections]
 [-Documentation::RequirePODUseEncodingUTF8]
 [-Editor::RequireEmacsFileVariables]
 [-ErrorHandling::RequireCarping]
 [-ErrorHandling::RequireCheckingReturnValueOfEval]
-[-Freenode::PackageMatchesFilename]
-[-Freenode::WhileDiamondDefaultAssignment]
-[-Freenode::EmptyReturn]
 [-Freenode::Each]
+[-Freenode::EmptyReturn]
+[-Freenode::PackageMatchesFilename]
+[-Freenode::StrictWarnings]
+[-Freenode::WhileDiamondDefaultAssignment]
 [-InputOutput::ProhibitBacktickOperators]
 [-InputOutput::ProhibitOneArgSelect]
 [-InputOutput::RequireBriefOpen]
@@ -47,8 +55,12 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Lax::ProhibitStringyEval::ExceptForRequire]
 [-Lax::RequireEndWithTrueConst]
 [-Lax::RequireExplicitPackage::ExceptForPragmata]
-[-Miscellanea::RequireRcsKeywords]
+[-logicLAB::ProhibitUseLib]
+[-logicLAB::RequireParamsValidate]
+[-logicLAB::RequireSheBang]
+[-logicLAB::RequireVersionFormat]
 [-Miscellanea::ProhibitUnrestrictedNoCritic]
+[-Miscellanea::RequireRcsKeywords]
 [-Modules::ProhibitAutomaticExportation] 
 [-Modules::ProhibitExcessMainComplexity]
 [-Modules::ProhibitMultiplePackages]
@@ -56,18 +68,27 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Modules::RequireEndWithOne]
 [-Modules::RequireExplicitInclusion]
 [-Modules::RequireExplicitPackage]
-[-NamingConventions::Capitalization]
+[-OTRS::ProhibitDumper]
+[-OTRS::ProhibitLocaltime]
+[-OTRS::ProhibitLowPrecedenceOps]
+[-OTRS::ProhibitOpen]
+[-OTRS::ProhibitRequire]
+[-OTRS::RequireCamelCase]
+[-OTRS::RequireParensWithMethods]
 [-References::ProhibitDoubleSigils]
 [-RegularExpressions::ProhibitCaptureWithoutTest]
-[-RegularExpressions::RequireDotMatchAnything]
 [-RegularExpressions::ProhibitEnumeratedClasses]
 [-RegularExpressions::ProhibitEscapedMetacharacters]
 [-RegularExpressions::ProhibitFixedStringMatches]
+[-RegularExpressions::RequireDefault]
+[-RegularExpressions::RequireDotMatchAnything]
 [-RegularExpressions::RequireExtendedFormatting]
+[-RegularExpressions::RequireExtendedFormattingExceptForSplit]
 [-RegularExpressions::RequireLineBoundaryMatching]
+[-Reneeb::ProhibitBlockEval]
 [-Subroutines::ProhibitAmbiguousFunctionCalls]
-[-Subroutines::ProhibitCallsToUnexportedSubs]
 [-Subroutines::ProhibitCallsToUndeclaredSubs]
+[-Subroutines::ProhibitCallsToUnexportedSubs]
 [-Subroutines::ProhibitExcessComplexity]
 [-Subroutines::ProhibitExplicitReturnUndef]
 [-Subroutines::ProhibitExportingUndeclaredSubs]
@@ -78,6 +99,10 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-TestingAndDebugging::RequireTestLabels]
 [-Tics::ProhibitLongLines]
 [-Tics::ProhibitManyArrows]
+[-TooMuchCode::ProhibitDuplicateLiteral]
+[-TooMuchCode::ProhibitDuplicateSub]
+[-TooMuchCode::ProhibitUnusedConstant]
+[-ValuesAndExpressions::PreventSQLInjection]
 [-ValuesAndExpressions::ProhibitAccessOfPrivateData]
 [-ValuesAndExpressions::ProhibitCommaSeparatedStatements]
 [-ValuesAndExpressions::ProhibitConstantPragma]
@@ -96,6 +121,7 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Variables::ProhibitLocalVars]
 [-Variables::ProhibitPackageVars]
 [-Variables::ProhibitPunctuationVars]
+[-Variables::RequireHungarianNotation]
 [-Variables::RequireInitializationForLocalVars]
 [-Variables::RequireLocalizedPunctuationVars]
 
@@ -106,3 +132,6 @@ stop_words = ActiveKids AutoCommit boolean Bunce CachedKids ChildHandles ChopBla
 [-Modules::RequirePerlVersion]
 [-Modules::RequireVersionVar]
 [-ValuesAndExpressions::ProhibitEscapedCharacters]
+
+## Does not seem to work, but here anyway:
+[-NamingConventions::Capitalization]
